fix: corrigir exibição de 150.000 livros na biblioteca

--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
                     <p class="number-label">Alunos</p>
                 </div>
                 <div class="number-item">
-                    <span class="number-value">150<span>mil</span></span>
+                    <span class="number-value">150.000<span>+</span></span>
                     <p class="number-label">Livros na biblioteca</p>
                 </div>
                 <div class="number-item">
